samples/_failures_safe/1761077055_071b3e_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_81685a88.c:134:29: error: expected declaration specifiers or ‘...’ at end of input
  134 | int matrix_transpose(struct matrix *a,
      |                             ^~~~~~
